5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1807_2567.log
== TEST (2019-06-11 16:41:32) 
-- CODE:
num=int(input("numero:")
		  
for i in num:
	print('*'*num-1)	  
	
		  
		  
-- ERROR:
File "XXXX", line 3
    for i in num:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:46:40) 
-- CODE:
from numpy import *
num=int(input("numero:")
		  
v=arange(num)
v=v-v[0]
print(v)		  
		  
		  
-- ERROR:
File "XXXX", line 4
    v=arange(num)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:46:59) 
-- CODE:
from numpy import *
num=int(input("numero:")
		  
v = arange(num)
v=v-v[0]
print(v)		  
		  
		  
-- ERROR:
File "XXXX", line 4
    v = arange(num)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:48:06) 
-- CODE:
from numpy import *
num=int(input("numero:")
		  
v = arange(num)

print(v)		  
		  
		  
-- ERROR:
File "XXXX", line 4
    v = arange(num)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:48:07) 
-- CODE:
from numpy import *
num=int(input("numero:")
		  
v = arange(num)

print(v)		  
		  
		  
-- ERROR:
File "XXXX", line 4
    v = arange(num)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:48:07) 
-- CODE:
from numpy import *
num=int(input("numero:")
		  
v = arange(num)

print(v)		  
		  
		  
-- ERROR:
File "XXXX", line 4
    v = arange(num)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:48:07) 
-- CODE:
from numpy import *
num=int(input("numero:")
		  
v = arange(num)

print(v)		  
		  
		  
-- ERROR:
File "XXXX", line 4
    v = arange(num)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:48:07) 
-- CODE:
from numpy import *
num=int(input("numero:")
		  
v = arange(num)

print(v)		  
		  
		  
-- ERROR:
File "XXXX", line 4
    v = arange(num)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:48:13) 
-- CODE:
from numpy import *
num=int(input("numero:")
		  
v = arange(num)

print(v)		  
		  
		  
-- ERROR:
File "XXXX", line 4
    v = arange(num)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:48:27) 
-- CODE:
from numpy import *
num=int(input("numero:")
		  
v = zeros(num)

print(v)		  
		  
		  
-- ERROR:
File "XXXX", line 4
    v = zeros(num)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:48:44) 
-- CODE:
from numpy import *
num=int(input("numero:")
		  
v = zeros(num)

print(v)		  
		  
		  
-- ERROR:
File "XXXX", line 4
    v = zeros(num)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:48:58) 
-- CODE:
from numpy import *
num=int(input("numero:")
		  
v=zeros(num)

print(v)		  
		  
		  
-- ERROR:
File "XXXX", line 4
    v=zeros(num)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:49:13) 
-- CODE:
from numpy import *
num=int(input("numero:")
		  
v=array(zeros(num))

print(v)		  
		  
		  
-- ERROR:
File "XXXX", line 4
    v=array(zeros(num))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:50:22) 
-- CODE:
from numpy import *

num=int(input("..."))

v=arange(num)

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:51:45) 
-- CODE:
from numpy import *

num=int(input("..."))

v=arange(num)
for i in range(size(v)):
	v[i]=v[i]+1

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:46) 
-- CODE:
from numpy import *

num=int(input("..."))

v=arange(num)
for i in range(size(v)):
	v[i]=v[i]+1

i=-1
cont=0
while(cont<size(vet)):
	print(v[i])
	i=i-1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:46) 
-- CODE:
from numpy import *

num=int(input("..."))

v=arange(num)
for i in range(size(v)):
	v[i]=v[i]+1

i=-1
cont=0
while(cont<size(vet)):
	print(v[i])
	i=i-1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:57) 
-- CODE:
from numpy import *

num=int(input("..."))

v=arange(num)
for i in range(size(v)):
	v[i]=v[i]+1

i=-1
cont=0
while(cont<size(v)):
	print(v[i])
	i=i-1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:54:21) 
-- CODE:
from numpy import *

num=int(input("..."))

v=arange(num)
for i in range(size(v)):
	v[i]=v[i]+1

i=-1
cont=1
while(cont<size(v)):
	print(v[i])
	i=i-1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:55:01) 
-- CODE:
from numpy import *

num=int(input("..."))

v=arange(num)
for i in range(size(v)):
	v[i]=v[i]+1

i=-1
cont=1
while(cont!=size(v)):
	print(v[i])
	i=i-1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:55:46) 
-- CODE:
from numpy import *

num=int(input("..."))

v=arange(num)
for i in range(size(v)):
	v[i]=v[i]+1

i=-1
cont=0
while(cont!=size(v)):
	print(v[i])
	i=i-1
	cont=cont+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:56:37) 
-- CODE:
from numpy import *

num=int(input("..."))

v=arange(num)
for i in range(size(v)):
	v[i]=v[i]+1

i=-1
cont=0
while(cont!=size(v)):
	print('*'*v[i])
	i=i-1
	cont=cont+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:57:37) 
-- CODE:
from numpy import *

num=int(input("..."))

v=arange(num)
for i in range(size(v)):
	v[i]=v[i]+1

i=-1
cont=0
while(cont!=size(v)):
	print('*'*v[i])
	i=i-1
	cont=cont+1
	
for i in range(size(v)):
	print('*'*v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:57:51) 
-- CODE:
from numpy import *

num=int(input("..."))

v=arange(num)
for i in range(size(v)):
	v[i]=v[i]+1

i=-1
cont=0
while(cont!=size(v)):
	print('*'*v[i])
	i=i-1
	cont=cont+1
	
for i in range(size(v)):
	print('*'*v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:57:57) 
-- CODE:
from numpy import *

num=int(input("..."))

v=arange(num)
for i in range(size(v)):
	v[i]=v[i]+1

i=-1
cont=0
while(cont!=size(v)):
	print('*'*v[i])
	i=i-1
	cont=cont+1
	
for i in range(size(v)):
	print('*'*v[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:58:06) 
-- CODE:
from numpy import *

num=int(input("..."))

v=arange(num)
for i in range(size(v)):
	v[i]=v[i]+1

i=-1
cont=0
while(cont!=size(v)):
	print('*'*v[i])
	i=i-1
	cont=cont+1
	
for i in range(size(v)):
	print('*'*v[i])

-- EXECUTION TIME:
1.02457
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
